--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "watch-ts": "tsc-watch --watch --OnSuccess \"tsc-alias\"",
     "watch-js": "nodemon --quiet --watch",
     "prepare": "husky install",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lint": "eslint src/**"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "concurrently": "^7.3.0",
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "husky": "^8.0.1",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
