feat: setup jest

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,5 +14,7 @@
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
-  "rules": {}
+  "rules": {
+    "quotes": [2, "double", { "avoidEscape": true }]
+  }
 }
