--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "start:dev": "concurrently -c blue,yellow \"npm:watch-*\"",
+    "start:dev": "concurrently -c blue,yellow \"npm:watch-ts\" \"npm:watch-js\"",
     "watch-ts": "tsc-watch --watch --OnSuccess \"tsc-alias\"",
     "watch-js": "nodemon --quiet --watch",
+    "watch-test": "jest --watch",
+    "test": "jest",
     "prepare": "husky install",
     "format": "prettier --write .",
     "lint": "eslint src/**"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.6",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "concurrently": "^7.3.0",
@@ -24,8 +27,11 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "husky": "^8.0.1",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
+    "ts-jest": "^28.0.7",
+    "ts-node": "^10.9.1",
     "tsc-alias": "^1.7.0",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.7.4"
