--- a/package.json
+++ b/package.json
@@ -9,31 +9,33 @@
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "start:dev": "concurrently -c blue,yellow \"npm:watch-ts\" \"npm:watch-js\"",
-    "watch-ts": "tsc-watch --watch --OnSuccess \"tsc-alias\"",
-    "watch-js": "nodemon --quiet --watch",
+    "start:dev": "tsc-watch --silent --watch --onSuccess \"yon tsc-watch-on-success\"",
+    "tsc-watch-on-success": "yon resolve-path-mapping && yon start:prod",
+    "start:prod": "node .",
+    "build:prod": "yon build:ts && yon resolve-path-mapping",
+    "build:ts": "tsc",
+    "resolve-path-mapping": "tsc-alias",
     "watch-test": "jest --watch",
     "test": "jest",
     "prepare": "husky install",
     "format": "prettier --write .",
-    "lint": "eslint src/**"
+    "lint": "eslint src/**/*.ts"
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
-    "concurrently": "^7.3.0",
     "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "husky": "^8.0.1",
     "jest": "^28.1.3",
-    "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.7.0",
     "tsc-watch": "^5.0.3",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "yarn-or-npm": "^3.0.1"
   }
 }
