--- a/package.json
+++ b/package.json
@@ -9,33 +9,50 @@
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "start:dev": "tsc-watch --silent --watch --onSuccess \"yon tsc-watch-on-success\"",
-    "tsc-watch-on-success": "yon resolve-path-mapping && yon start:prod",
+    "start:dev": "npm run watch-ts",
+    "start:dev-database": "docker-compose -f docker/dev/dev.docker-compose.yml up -d",
     "start:prod": "node .",
-    "build:prod": "yon build:ts && yon resolve-path-mapping",
+    "build": "npm run build:ts && npm run resolve-path-mapping",
+    "prebuild": "npm install",
     "build:ts": "tsc",
-    "resolve-path-mapping": "tsc-alias",
+    "resolve-path-mapping": "tsc-alias --directory dist",
+    "watch-ts": "tsc-watch --watch --onSuccess \"npm run tsc-watch-on-success\"",
+    "tsc-watch-on-success": "npm run resolve-path-mapping && npm run start:prod",
     "watch-test": "jest --watch",
+    "migrate": "typeorm migration:run --dataSource dist/infra/orm/typeorm/cli/database-connection.js",
     "test": "jest",
     "prepare": "husky install",
     "format": "prettier --write .",
     "lint": "eslint src/**/*.ts"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
+    "@types/node": "^18.6.2",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "husky": "^8.0.1",
-    "jest": "^28.1.3",
+    "jest": "^26.6.3",
     "prettier": "^2.7.1",
-    "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.7.0",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.7.4",
     "yarn-or-npm": "^3.0.1"
+  },
+  "dependencies": {
+    "ts-jest": "^26.5.4",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.7.0",
+    "typeorm": "^0.3.7",
+    "uuid": "^8.3.2"
   }
 }
