--- a/package.json
+++ b/package.json
@@ -41,16 +41,15 @@
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.7.0",
     "tsc-watch": "^5.0.3",
-    "typescript": "^4.7.4",
-    "yarn-or-npm": "^3.0.1"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "ts-jest": "^26.5.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "ts-jest": "^26.5.4",
     "tsyringe": "^4.7.0",
     "typeorm": "^0.3.7",
     "uuid": "^8.3.2"
