--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "express-async-errors": "^3.1.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.10",
     "ts-jest": "^26.5.4",
     "tsyringe": "^4.7.0",
     "typeorm": "^0.3.7",
