--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "start:dev": "npm run watch-ts",
     "start:dev-database": "docker-compose -f docker/dev/dev.docker-compose.yml up -d",
     "start:prod": "node .",
-    "build": "npm run build:ts && npm run resolve-path-mapping",
+    "build": "npm run build:ts",
     "prebuild": "npm install",
-    "build:ts": "tsc",
+    "build:ts": "tsc && npm run resolve-path-mapping",
     "resolve-path-mapping": "tsc-alias --directory dist",
     "watch-ts": "tsc-watch --watch --onSuccess \"npm run tsc-watch-on-success\"",
     "tsc-watch-on-success": "npm run resolve-path-mapping && npm run start:prod",
@@ -27,6 +27,7 @@
     "lint": "eslint src/**/*.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.2",
@@ -45,6 +46,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
