--- a/package.json
+++ b/package.json
@@ -40,11 +40,9 @@
     "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "husky": "^8.0.1",
     "jest": "^26.6.3",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
-    "tsc-alias": "^1.7.0",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.7.4"
   },
@@ -59,6 +57,8 @@
     "ts-jest": "^26.5.4",
     "tsyringe": "^4.7.0",
     "typeorm": "^0.3.7",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "tsc-alias": "^1.7.0",
+    "husky": "^8.0.1"
   }
 }
