--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
   "engines": {
     "node": "16.14.2"
   },
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "license": "MIT",
   "scripts": {
-    "start:dev": "npm run watch-ts",
-    "start:dev-database": "docker-compose -f docker/dev/dev.docker-compose.yml up -d",
     "start:prod": "node .",
+    "start:dev": "docker-compose -f docker/dev/dev.docker-compose.yml up",
+    "docker:start-dev": "npm run watch-ts",
     "build": "npm run build:ts",
     "prebuild": "npm install",
     "build:ts": "tsc && npm run resolve-path-mapping",
-    "resolve-path-mapping": "tsc-alias --directory dist",
+    "resolve-path-mapping": "tspath -f > /dev/null",
     "watch-ts": "tsc-watch --watch --onSuccess \"npm run tsc-watch-on-success\"",
     "tsc-watch-on-success": "npm run resolve-path-mapping && npm run start:prod",
     "watch-test": "jest --watch",
-    "migrate": "typeorm migration:run --dataSource dist/infra/orm/typeorm/cli/database-connection.js",
+    "migrate": "typeorm migration:run --dataSource dist/src/infra/orm/typeorm/cli/database-connection.js",
     "premigrate": "npm run build",
     "test": "jest",
     "prepare": "husky install",
@@ -33,7 +33,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
-    "@types/node": "^18.6.2",
+    "@types/node": "^18.6.4",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
@@ -44,6 +44,7 @@
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "tsc-watch": "^5.0.3",
+    "tspath": "^1.3.7",
     "typescript": "^4.7.4"
   },
   "dependencies": {
@@ -51,14 +52,13 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "husky": "^8.0.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.10",
     "ts-jest": "^26.5.4",
     "tsyringe": "^4.7.0",
     "typeorm": "^0.3.7",
-    "uuid": "^8.3.2",
-    "tsc-alias": "^1.7.0",
-    "husky": "^8.0.1"
+    "uuid": "^8.3.2"
   }
 }
