--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "tsc-watch": "^5.0.3",
-    "tspath": "^1.3.7",
     "typescript": "^4.7.4"
   },
   "dependencies": {
@@ -59,6 +58,7 @@
     "ts-jest": "^26.5.4",
     "tsyringe": "^4.7.0",
     "typeorm": "^0.3.7",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "tspath": "^1.3.7"
   }
 }
